--- a/mainpage.css
+++ b/mainpage.css
@@ -36,21 +36,70 @@ body{
 	width: 330px;
 }
 #mainui-login{
-	height: 590px;
+	display: flex;
+	height: 294px;
+	align-items : center;
+	justify-content: center;
 }
 #mainui-guide{
 	height: 590px;
 }
 #mainui-review{
-	height: 180px;
+	height: 294px;
 }
 #mainui-leaderboard{
-	height: 160px;
+	height: 294px;
 }
-
-#mainui-login, #mainui-review, #mainui-leaderboard, #mainui-guide{ /* 메인ui 단체 적용  */
+#mainui-member{
+	height: 294px;
+}
+#mainui-login, #mainui-review, #mainui-leaderboard, #mainui-guide, #mainui-member{ /* 메인ui 단체 적용  */
 	background-color: #fff;
 	border-radius: 10px;
 	margin: 6px 0px;
 	width: 329px;
+}
+#login-form{
+	position: relative;
+	justify-content: center;
+	align-items : center;
+}
+#login input{
+	margin-top: 13px;
+    width: 275px;
+    height: 40px;
+    font-size: 20px;
+    background-color: #e9e9e9;
+    border-radius: 3px;
+    border: 0;
+    padding-left: 10px;    
+}
+input::-webkit-input-placeholder{
+	font-size: 16px;
+
+}
+#login{
+}
+#signin input{
+	width: 285px;
+	height: 40px;
+	border: 0;
+	margin-top: 25px;
+	font-size: 18px;
+	color: white;
+	background-color: #006aff;
+	border-radius: 3px;
+}
+#signup input{
+	width: 285px;
+	height: 30px;
+	border: 0;
+	margin-top: 10px;
+	font-size: 14px;
+	color: white;
+	background-color: #1d467d;
+	border-radius: 3px;
+}
+.hidden{
+	display: none;
 }
