--- a/mainpage.css
+++ b/mainpage.css
@@ -1,5 +1,5 @@
 body{
-	font-family: "NanumGothic"; /* 임시 */
+	font-family: 'Noto Sans KR', sans-serif; 
 }
 #background{
 	position: absolute;
@@ -64,42 +64,111 @@ body{
 	justify-content: center;
 	align-items : center;
 }
-#login input{
-	margin-top: 13px;
-    width: 275px;
+#login input{ /* 로그인창 입력창 */
+	margin-bottom: 15px;
+    width: 270px;
     height: 40px;
-    font-size: 20px;
-    background-color: #e9e9e9;
+    font-size: 16px;
+    background-color: #F5F5F5;
     border-radius: 3px;
-    border: 0;
+ 	border: 1px solid #797979;
+    padding: 0px;
     padding-left: 10px;    
 }
-input::-webkit-input-placeholder{
+#login input::-webkit-input-placeholder{
 	font-size: 16px;
+}
 
-}
-#login{
-}
-#signin input{
-	width: 285px;
-	height: 40px;
+#login button{ /* 로그인 버튼*/
+	width: 280px;
+	height: 35px;
 	border: 0;
-	margin-top: 25px;
-	font-size: 18px;
+	margin-top: 15px;
+	margin-bottom: 10px;
+	font-size: 16px;
 	color: white;
 	background-color: #006aff;
 	border-radius: 3px;
+	font-family: inherit;
+	cursor: pointer;
 }
-#signup input{
-	width: 285px;
-	height: 30px;
+#login button:hover{
+	background-color: #0C60DE;
+}
+#signup button{ /* 회원가입 버튼 */
+	width: 280px;
+	height: 35px;
 	border: 0;
-	margin-top: 10px;
-	font-size: 14px;
+	margin-bottom: 5px;
+	font-size: 16px;
 	color: white;
-	background-color: #1d467d;
+	background-color: #3f51b5;
 	border-radius: 3px;
+	font-family: inherit;
+	cursor: pointer;
+}
+#signup button:hover{
+	background-color: #303f9f;
 }
 .hidden{
 	display: none;
+}
+
+#popup{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.6);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0s, opacity 0.3s ease;	
+}
+#popup-content {
+	width: 440px;
+	padding: 10px;
+	padding-top: 0;
+	padding-bottom: 25px;
+	background-color: #ffffff;
+	border-radius: 7px;
+}
+#popup-content h2 {
+	text-align: center;
+	margin-top: 2px;
+}
+#popup-content form {
+	display: flex;
+	flex-direction: column;
+	margin-left: 15px;
+	margin-right: 15px;
+}
+#popup-content input[type="text"],
+#popup-content input[type="password"],
+#popup-content select {
+	margin-bottom: 10px;
+	padding: 8px;
+	border-radius: 3px;
+	border: 1px solid #797979;
+	}
+#popup-content input[type="button"] {
+	padding: 8px 12px;
+	border: none;
+	border-radius: 3px;
+	background-color: #3f51b5;
+	color: #ffffff;
+	cursor: pointer;
+}
+#popup-content input[type="button"]:hover {
+	background-color: #303f9f;
+}
+#close-btn {
+	position: relative;
+	left: 97%;
+	cursor: pointer;
+	font-size: 20px;
+	font: bold;
 }
