--- a/mainpage.css
+++ b/mainpage.css
@@ -42,9 +42,9 @@ body{
 	height: 590px;
 }
 #guide{
-	width: 200px;
+	width: 250px;
 	text-align: center;
-	font-size: 17px;
+	font-size: 20px;
 }
 #mainui-savefile{
 	height: 294px;
@@ -56,13 +56,16 @@ body{
 	height: 294px;
 }
 #member{
+	height: 240px;
 	width: 200px;
 	text-align: center;
-	font-size: 17px;
+	font-size: 18px;
 }
 #member h2{
+	position: relative;
+	top: 0px;
 	margin-top: 0px;
-	margin-bottom:30px;
+	margin-bottom:20px;
 }
 #mainui-login, #mainui-savefile, #mainui-leaderboard, #mainui-guide, #mainui-member, #mainui-game{ /* 메인ui 단체 적용  */
 	background-color: #fff;
@@ -72,6 +75,39 @@ body{
 	display: flex;
 	align-items : center;
 	justify-content: center;
+}
+#mainui-savefile button{
+	width: 200px;
+	height: 125px;
+	border: 0;
+	margin-bottom: 5px;
+	font-size: 23px;
+	color: white;
+	background-color: #FF7043;
+	border-radius: 8px;
+	font-family: inherit;
+	cursor: pointer;
+}
+#mainui-savefile button:hover{
+	background-color: #F4511E;
+}
+#leaderboard-container{
+	height: 240px;
+	width: 200px;
+	font-size: 18px;
+	text-align: center;
+}
+#leaderboard-container h2 {
+	position: relative;
+	top:0px;;
+    margin-top: 0px;
+    margin-bottom: 20px;
+}
+#leaderboard-container ol {
+    list-style-type: none;
+    text-align: left;
+    padding: 0;
+    margin: 0;
 }
 #login-form{
 	position: relative;
@@ -251,11 +287,11 @@ body{
 	margin-bottom: 5px;
 	font-size: 16px;
 	color: white;
-	background-color: #FF7043;
+	background-color: #E53935;
 	border-radius: 3px;
 	font-family: inherit;
 	cursor: pointer;
 }
 #logout button:hover{
-	background-color: #F4511E;
+	background-color: #C62828;
 }
