--- a/mainpage.css
+++ b/mainpage.css
@@ -82,6 +82,7 @@ body{
 	border: 0;
 	margin-bottom: 5px;
 	font-size: 23px;
+	font-weight: 500;
 	color: white;
 	background-color: #FF7043;
 	border-radius: 8px;
@@ -207,12 +208,14 @@ body{
 	border: 1px solid #797979;
 	}
 #popup-content input[type="button"] {
-	padding: 8px 12px;
+	padding: 6px;
 	border: none;
 	border-radius: 3px;
 	background-color: #3f51b5;
 	color: #ffffff;
 	cursor: pointer;
+	font-size: 17px;
+	font-weight: 500;
 }
 #popup-content input[type="button"]:hover {
 	background-color: #303f9f;
@@ -222,7 +225,7 @@ body{
 	left: 97%;
 	cursor: pointer;
 	font-size: 20px;
-	font: bold;
+	font-weight: 600;
 }
 #mainui-game{
 	display: flex;
